Added change param functions

--- a/F21BC.ipynb
+++ b/F21BC.ipynb
@@ -57,12 +57,13 @@
    "source": [
     "class NeuralNetwork:\n",
     "    \n",
-    "    def __init__(self,layer_sizes, epochs, alpha):\n",
+    "    def __init__(self,layer_sizes, epochs, alpha, activations):\n",
     "        \n",
     "        self.layer_sizes = layer_sizes\n",
     "        self.num_iters = epochs\n",
     "        self.learning_rate = alpha\n",
-    "    \n",
+    "        self.activations = activations\n",
+    "        \n",
     "    def __repr__(self):\n",
     "        return f\"ANN Hyperparameters\\nLayers: {self.layers_sizes}\\nLearning rate: {self.learning_rate} \\\n",
     "        \\nIterations: {self.num_iters}\"\n",
@@ -78,15 +79,19 @@
     "        layers = len(params)//2\n",
     "        values = {}\n",
     "        for i in range(1, layers+1):\n",
+    "            \n",
+    "            activation_function_str = self.activations[i-1]\n",
+    "            activation = getattr(Activations,activation_function_str)\n",
+    "            \n",
     "            if i==1:\n",
     "                values['Z' + str(i)] = np.dot(params['W' + str(i)], X_train) + params['B' + str(i)]\n",
-    "                values['A' + str(i)] = Activations.tanh(values['Z' + str(i)])\n",
+    "                values['A' + str(i)] = activation(values['Z' + str(i)])\n",
     "            else:\n",
     "                values['Z' + str(i)] = np.dot(params['W' + str(i)], values['A' + str(i-1)]) + params['B' + str(i)]\n",
     "                if i==layers:\n",
     "                    values['A' + str(i)] = values['Z' + str(i)]\n",
     "                else:\n",
-    "                    values['A' + str(i)] = Activations.relu(values['Z' + str(i)])\n",
+    "                    values['A' + str(i)] = activation(values['Z' + str(i)])\n",
     "        return values\n",
     "\n",
     "    def compute_cost(self, values, Y_train):\n",
@@ -122,27 +127,67 @@
     "            params_updated['B' + str(i)] = params['B' + str(i)] - self.learning_rate * grads['B' + str(i)]\n",
     "        return params_updated\n",
     "\n",
-    "    def train(self, X_train, Y_train):\n",
+    "    def train(self, X_train, Y_train, show_cost = False):\n",
     "        params = self.initialize_params()\n",
     "        for i in range(self.num_iters):\n",
     "            values = self.forward_propagation(X_train.T, params)\n",
     "            cost = self.compute_cost(values, Y_train.T)\n",
     "            grads = self.backward_propagation(params, values,X_train.T, Y_train.T)\n",
     "            params = self.update_params(params, grads)\n",
-    "            print('Cost at iteration ' + str(i+1) + ' = ' + str(cost) + '\\n')\n",
-    "        return params\n",
+    "            if (show_cost == True):\n",
+    "                print('Cost at iteration ' + str(i+1) + ' = ' + str(cost) + '\\n')\n",
+    "        self.params = params\n",
+    "        self.X_train = X_train\n",
+    "        self.Y_train = Y_train\n",
     "    \n",
-    "    def compute_accuracy(self, X_train, X_test, Y_train, Y_test, params):\n",
-    "        values_train = self.forward_propagation(X_train.T, params)\n",
-    "        values_test = self.forward_propagation(X_test.T, params)\n",
-    "        train_acc = np.sqrt(mean_squared_error(Y_train, values_train['A' + str(len(self.layer_sizes)-1)].T))\n",
+    "    def test(self, X_test, Y_test):\n",
+    "        values_train = self.forward_propagation(self.X_train.T, self.params)\n",
+    "        values_test = self.forward_propagation(X_test.T, self.params)\n",
+    "        train_acc = np.sqrt(mean_squared_error(self.Y_train, values_train['A' + str(len(self.layer_sizes)-1)].T))\n",
     "        test_acc = np.sqrt(mean_squared_error(Y_test, values_test['A' + str(len(self.layer_sizes)-1)].T))\n",
+    "        self.Y_test = Y_test\n",
+    "        self.X_test = X_test\n",
+    "        self.train_acc = train_acc\n",
+    "        self.test_acc = test_acc\n",
     "        return train_acc, test_acc\n",
     "\n",
-    "    def predict(self, X, params):\n",
-    "        values = self.forward_propagation(X.T, params)\n",
+    "    def predict(self, X):\n",
+    "        values = self.forward_propagation(X.T, self.params)\n",
     "        predictions = values['A' + str(len(values)//2)].T\n",
-    "        return predictions"
+    "        return predictions\n",
+    "    \n",
+    "    def change_layers(self, layers):\n",
+    "        old_test_acc = self.test_acc\n",
+    "        self.layer_sizes = layers\n",
+    "        self.train(self.X_train, self.Y_train)\n",
+    "        new_train_acc, new_test_acc = self.test(self.X_test, self.Y_test)\n",
+    "        self.test_acc = new_test_acc\n",
+    "        print(f\"Old test accuracy: {old_test_acc:.4f}\\nNew test accuracy: {self.test_acc:.4f}\")\n",
+    "    \n",
+    "    def change_activations(self, activations):\n",
+    "        old_test_acc = self.test_acc\n",
+    "        self.activations = activations\n",
+    "        self.train(self.X_train, self.Y_train)\n",
+    "        new_train_acc, new_test_acc = self.test(self.X_test, self.Y_test)\n",
+    "        self.test_acc = new_test_acc\n",
+    "        print(f\"Old test accuracy: {old_test_acc:.4f}\\nNew test accuracy: {self.test_acc:.4f}\")\n",
+    "        \n",
+    "    def change_epochs(self, epochs):\n",
+    "        old_test_acc = self.test_acc\n",
+    "        self.num_iters = epochs\n",
+    "        self.train(self.X_train, self.Y_train)\n",
+    "        new_train_acc, new_test_acc = self.test(self.X_test, self.Y_test)\n",
+    "        self.test_acc = new_test_acc\n",
+    "        print(f\"Old test accuracy: {old_test_acc:.4f}\\nNew test accuracy: {self.test_acc:.4f}\")\n",
+    "    \n",
+    "    def change_learning_rate(self,alpha):\n",
+    "        old_test_acc = self.test_acc\n",
+    "        self.learning_rate = alpha\n",
+    "        self.train(self.X_train, self.Y_train)\n",
+    "        new_train_acc, new_test_acc = self.test(self.X_test, self.Y_test)\n",
+    "        self.test_acc = new_test_acc\n",
+    "        print(f\"Old test accuracy: {old_test_acc:.4f}\\nNew test accuracy: {self.test_acc:.4f}\")\n",
+    "        "
    ]
   },
   {
@@ -173,43 +218,17 @@
    },
    "outputs": [],
    "source": [
-    "nn = NeuralNetwork([4,5,5,1],10,0.03)"
+    "nn = NeuralNetwork([4,5,5,1],10,0.03,['tanh','relu','relu', 'sigmoid'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cost at iteration 1 = 0.22469139202385582\n",
-      "\n",
-      "Cost at iteration 2 = 0.22468480189905315\n",
-      "\n",
-      "Cost at iteration 3 = 0.22467821220456924\n",
-      "\n",
-      "Cost at iteration 4 = 0.224671622940376\n",
-      "\n",
-      "Cost at iteration 5 = 0.2246650341064453\n",
-      "\n",
-      "Cost at iteration 6 = 0.22465844570274907\n",
-      "\n",
-      "Cost at iteration 7 = 0.22465185772925925\n",
-      "\n",
-      "Cost at iteration 8 = 0.22464527018594768\n",
-      "\n",
-      "Cost at iteration 9 = 0.22463868307278637\n",
-      "\n",
-      "Cost at iteration 10 = 0.2246320963897471\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "params = nn.train(X_train,Y_train);"
+    "## To see cost in iterations, use \"show_cost = True\" argument\n",
+    "nn.train(X_train,Y_train);"
    ]
   },
   {
@@ -218,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = nn.predict(X_train[4], params)"
+    "predictions = nn.predict(X_train[4])"
    ]
   },
   {
@@ -227,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_acc, test_acc = nn.compute_accuracy(X_train, X_test, Y_train, Y_test, params)"
+    "train_acc, test_acc = nn.test(X_test, Y_test)"
    ]
   },
   {
@@ -239,7 +258,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of Training Data = 0.670261904238637\n"
+      "Accuracy of Training Data = 0.6715688755896381\n"
      ]
     }
    ],
@@ -256,7 +275,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of Test Data = 0.6568719978238466\n"
+      "Accuracy of Test Data = 0.655680848463995\n"
      ]
     }
    ],
@@ -273,17 +292,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predictions =  [[0.00137821]\n",
-      " [0.00137841]\n",
-      " [0.00137421]\n",
-      " [0.00137949]\n",
-      " [0.00137405]]\n"
+      "Predictions =  [[0.0006391 ]\n",
+      " [0.00063485]\n",
+      " [0.00063707]\n",
+      " [0.0006348 ]\n",
+      " [0.00063471]]\n"
      ]
     }
    ],
    "source": [
     "print('Predictions = ', predictions)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Old test accuracy: 0.6557\n",
+      "New test accuracy: 0.6556\n"
+     ]
+    }
+   ],
+   "source": [
+    "nn.change_layers([4,16,16,8,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Old test accuracy: 0.6556\n",
+      "New test accuracy: 0.6661\n"
+     ]
+    }
+   ],
+   "source": [
+    "nn.change_activations(['sigmoid','tanh','sigmoid','relu'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Old test accuracy: 0.6661\n",
+      "New test accuracy: 0.6492\n"
+     ]
+    }
+   ],
+   "source": [
+    "nn.change_learning_rate(0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Old test accuracy: 0.6492\n",
+      "New test accuracy: 0.6368\n"
+     ]
+    }
+   ],
+   "source": [
+    "nn.change_epochs(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
