Added showCost argument

--- a/F21BC.ipynb
+++ b/F21BC.ipynb
@@ -227,8 +227,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## To see cost in iterations, use \"show_cost = True\" argument\n",
-    "nn.train(X_train,Y_train);"
+    "## To see cost in iterations, change show_cost to True\n",
+    "nn.train(X_train,Y_train, show_cost=False);"
    ]
   },
   {
