remove test code

--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -49,13 +49,11 @@
       },
       "source": [
         "data = pd.read_csv(\"./data_banknote_authentication.txt\", header=None)\n",
-        "m, n = data.shape\n",
         "# seperate into input and output features\n",
         "X, Y = data.values[:, :-1], data.values[:, -1]\n",
         "Y = LabelEncoder().fit_transform(Y)\n",
-        "# split into train and test datasets with 80:20 ratio\n",
-        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.33)\n",
-        "n_features = X.shape[1]\n",
+        "# split into train and test datasets\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.3)\n",
         "\n",
         "X_train = X_train.T\n",
         "X_test = X_test.T"
