--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -49,6 +49,7 @@
       },
       "source": [
         "data = pd.read_csv(\"./data_banknote_authentication.txt\", header=None)\n",
+        "m, n = data.shape\n",
         "# seperate into input and output features\n",
         "X, Y = data.values[:, :-1], data.values[:, -1]\n",
         "Y = LabelEncoder().fit_transform(Y)\n",
